resources/proxy/route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: httpbin-strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /httpbingo
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: httpbin
  annotations:
    hub.traefik.io/api: httpbin
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/httpbingo`)
      services:
        - name: httpbin-svc
          port: 8000
      middlewares:
        - name: httpbin-strip-prefix
